Finished HTML5 Overview

--- a/arch/systemarch.tex
+++ b/arch/systemarch.tex
@@ -12,14 +12,14 @@
 \subsection{Controller}
 \section{Modular Front-end Architecture}
 \subsection{Input Modules}
-\subsubsection{Joystick}
-\subsubsection{Gamepad}
-\subsubsection{Device Orientation}
-\subsubsection{Voice Commands}
+\subsubsection{Joystick} \label{joystick}
+\subsubsection{Gamepad} \label{gamepad}
+\subsubsection{Device Orientation} \label{deviceorientation}
+\subsubsection{Voice Commands} \label{voicecommands}
 \subsubsection{Custom Input}
 \subsection{Output Modules}
-\subsubsection{Data Monitor}
-\subsubsection{Live Video}
+\subsubsection{Data Monitor} \label{datamonitor}
+\subsubsection{Live Video} \label{livevideo}
 \subsubsection{Live Audio}
 \subsubsection{Geolocation}
 \subsubsection{Custom Data}
