--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -39,7 +39,15 @@ World Wide Web Consortium,
 \emph{\href{http://www.w3.org/html/logo/faq.html}{W3C HTML5 Logo FAQ}},  
 2011.
 
+\bibitem{w3cwebquality02}
+W3C Quality Assurance Interest Group,
+\emph{\href{http://www.w3.org/QA/2002/04/Web-Quality}{W3C Web Quality Assurance}},  
+2002.
 
+\bibitem{w3c04}
+World Wide Web Consortium,
+\emph{\href{http://www.w3.org/2004/04/webapps-cdf-ws/}{The W3C Workshop on Web Applications and Compound Documents}},  
+2004.
 
 
 \bibitem{pilgrim09}
