--- a/pfc.tex
+++ b/pfc.tex
@@ -52,6 +52,7 @@
 \usepackage{hyperref}
 \usepackage{makeidx}
 \usepackage{minted}
+\usepackage{wrapfig}
 \usepackage{lipsum}
 %%%% End Import Packages %%%%
 
